--- a/platform/mv3/extension/_locales/el/messages.json
+++ b/platform/mv3/extension/_locales/el/messages.json
@@ -156,7 +156,7 @@
     "description": "Label for a checkbox in the options page"
   },
   "showBlockedCountLabel": {
-    "message": "Show the number of blocked requests on the toolbar icon",
+    "message": "Εμφάνιση του αριθμού των αποκλεισμένων αιτημάτων στο εικονίδιο της γραμμής εργαλείων",
     "description": "Label for a checkbox in the options page"
   }
 }
