--- a/platform/mv3/extension/_locales/zh_CN/messages.json
+++ b/platform/mv3/extension/_locales/zh_CN/messages.json
@@ -156,7 +156,7 @@
     "description": "Label for a checkbox in the options page"
   },
   "showBlockedCountLabel": {
-    "message": "在工具栏图标上显示已拦截的请求数",
+    "message": "在工具栏图标上显示拦截请求数",
     "description": "Label for a checkbox in the options page"
   }
 }
