--- a/platform/mv3/extension/_locales/de/messages.json
+++ b/platform/mv3/extension/_locales/de/messages.json
@@ -251,6 +251,14 @@
     "message": "uBO Lite hat das Laden der folgenden Seite verhindert:",
     "description": "Sentence used in the strict-blocked page"
   },
+  "strictblockReasonSentence1": {
+    "message": "The page was blocked because of a matching filter in {{listname}}.",
+    "description": "Text informing about what is causing the page to be blocked"
+  },
+  "strictblockRedirectSentence1": {
+    "message": "The blocked page wants to redirect to another site. If you choose to proceed, you will navigate directly to: {{url}}",
+    "description": "Text warning about an incoming redirect"
+  },
   "strictblockNoParamsPrompt": {
     "message": "ohne Parameter",
     "description": "Label to be used for the parameter-less URL"
